Adding support for accessing anchors across layers from within SQL using temporary tables. Adding support for anchor-cond to polygon and line symbolizers. Adding support for per-layer raster post processing using GMIC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ mapnik_option(USE_WEBP "adds webp support" ON)
 mapnik_option(USE_LIBXML2 "adds libxml2 support" ON)
 mapnik_option(USE_CAIRO "adds the cairo renderer" ON)
 mapnik_option(USE_PROJ "adds proj support" ON)
+mapnik_option(USE_GMIC "adds gmic support" ON)
 mapnik_option(USE_GRID_RENDERER "adds grid renderer" ON)
 mapnik_option(USE_SVG_RENDERER "adds svg renderer" ON)
 mapnik_option(USE_BIGINT "uses 64 bit instead of 32" ON)
@@ -355,6 +356,13 @@ if(USE_PROJ)
     math(EXPR MAPNIK_PROJ_VERSION "${PROJ_VERSION_MAJOR}*10000 + ${PROJ_VERSION_MINOR}*100 + ${PROJ_VERSION_PATCH}" OUTPUT_FORMAT DECIMAL)
     message(STATUS "Using mapnik PROJ version: ${MAPNIK_PROJ_VERSION}")
     list(APPEND MAPNIK_COMPILE_DEFS MAPNIK_USE_PROJ MAPNIK_PROJ_VERSION=${MAPNIK_PROJ_VERSION})
+endif()
+
+
+if(USE_GMIC)
+    mapnik_find_package(GMIC REQUIRED)
+    list(APPEND MAPNIK_COMPILE_DEFS HAVE_GMIC)
+    list(APPEND MAPNIK_OPTIONAL_LIBS GMIC::GMIC)
 endif()
 
 if(USE_GRID_RENDERER)
